ARROW-7047: [C++] Add CastExpression to type and like expression