cpp/src/arrow/dataset/filter.h
@@ -17,6 +17,7 @@
 
 #pragma once
 
+#include <functional>
 #include <memory>
 #include <string>
 #include <utility>
@@ -24,6 +25,7 @@
 
 #include "arrow/compute/context.h"
 #include "arrow/compute/kernel.h"
+#include "arrow/compute/kernels/cast.h"
 #include "arrow/compute/kernels/compare.h"
 #include "arrow/dataset/type_fwd.h"
 #include "arrow/dataset/visibility.h"
@@ -50,7 +52,7 @@ struct ExpressionType {
     NOT,
 
     /// cast an expression to a given DataType
-    // TODO(bkietz) CAST,
+    CAST,
 
     /// a conjunction of multiple expressions (true if all operands are true)
     AND,
@@ -195,6 +197,15 @@ class ARROW_DS_EXPORT Expression {
   InExpression In(std::shared_ptr<Array> set) const;
 
   IsValidExpression IsValid() const;
+
+  CastExpression CastTo(std::shared_ptr<DataType> type,
+                        compute::CastOptions options = compute::CastOptions()) const;
+
+  CastExpression CastLike(const Expression& expr,
+                          compute::CastOptions options = compute::CastOptions()) const;
+
+  CastExpression CastLike(std::shared_ptr<Expression> expr,
+                          compute::CastOptions options = compute::CastOptions()) const;
 
  protected:
   ExpressionType::type type_;
@@ -342,6 +353,36 @@ class ARROW_DS_EXPORT InExpression final
   std::shared_ptr<Array> set_;
 };
 
+/// Explicitly cast an expression to a different type
+class ARROW_DS_EXPORT CastExpression final
+    : public ExpressionImpl<UnaryExpression, CastExpression, ExpressionType::CAST> {
+ public:
+  CastExpression(std::shared_ptr<Expression> operand, std::shared_ptr<DataType> to,
+                 compute::CastOptions options)
+      : ExpressionImpl(std::move(operand)),
+        to_(std::move(to)),
+        options_(std::move(options)) {}
+
+  CastExpression(std::shared_ptr<Expression> operand, std::shared_ptr<Expression> like,
+                 compute::CastOptions options)
+      : ExpressionImpl(std::move(operand)),
+        like_(std::move(like)),
+        options_(std::move(options)) {}
+
+  std::string ToString() const override;
+
+  std::shared_ptr<Expression> Assume(const Expression& given) const override;
+
+  Result<std::shared_ptr<DataType>> Validate(const Schema& schema) const override;
+
+  const compute::CastOptions& options() const { return options_; }
+
+ private:
+  std::shared_ptr<DataType> to_;
+  std::shared_ptr<Expression> like_;
+  compute::CastOptions options_;
+};
+
 /// Represents a scalar value; thin wrapper around arrow::Scalar
 class ARROW_DS_EXPORT ScalarExpression final : public Expression {
  public:
@@ -478,14 +519,17 @@ auto VisitExpression(const Expression& expr, Visitor&& visitor)
     case ExpressionType::IS_VALID:
       return visitor(internal::checked_cast<const IsValidExpression&>(expr));
 
-    case ExpressionType::NOT:
-      return visitor(internal::checked_cast<const NotExpression&>(expr));
-
     case ExpressionType::AND:
       return visitor(internal::checked_cast<const AndExpression&>(expr));
 
     case ExpressionType::OR:
       return visitor(internal::checked_cast<const OrExpression&>(expr));
+
+    case ExpressionType::NOT:
+      return visitor(internal::checked_cast<const NotExpression&>(expr));
+
+    case ExpressionType::CAST:
+      return visitor(internal::checked_cast<const CastExpression&>(expr));
 
     case ExpressionType::COMPARISON:
       return visitor(internal::checked_cast<const ComparisonExpression&>(expr));
@@ -562,9 +606,6 @@ class ARROW_DS_EXPORT TreeEvaluator : public ExpressionEvaluator {
   Result<compute::Datum> Evaluate(const FieldExpression& expr,
                                   const RecordBatch& batch) const;
 
-  Result<compute::Datum> Evaluate(const NotExpression& expr,
-                                  const RecordBatch& batch) const;
-
   Result<compute::Datum> Evaluate(const AndExpression& expr,
                                   const RecordBatch& batch) const;
 
@@ -575,6 +616,12 @@ class ARROW_DS_EXPORT TreeEvaluator : public ExpressionEvaluator {
                                   const RecordBatch& batch) const;
 
   Result<compute::Datum> Evaluate(const IsValidExpression& expr,
+                                  const RecordBatch& batch) const;
+
+  Result<compute::Datum> Evaluate(const NotExpression& expr,
+                                  const RecordBatch& batch) const;
+
+  Result<compute::Datum> Evaluate(const CastExpression& expr,
                                   const RecordBatch& batch) const;
 
   Result<compute::Datum> Evaluate(const ComparisonExpression& expr,
